# python-template

./: .pre-commit-config.yaml  pyproject.toml
